samples/_failures_safe/1761347111_6e4891_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_647aa4d5.c: In function ‘main’:
./samples/SAFE/__tmp_647aa4d5.c:168:5: error: expected declaration or statement at end of input
  168 |     size_t len = strlen(input);
      |     ^~~~~~
